separate footer, fix main border color in dark mode

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,39 @@ li {
   padding: 0;
   margin: 0; }
 
+html {
+  font-family: 'Roboto Mono', monospace; }
+  html.dark {
+    background: #111;
+    color: #fff; }
+
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%; }
+
+.row {
+  display: flex;
+  flex-direction: row; }
+
+.column {
+  display: flex;
+  flex-direction: column;
+  flex: 1; }
+
+@media (max-width: 1000px) {
+  .column {
+    width: 100%; } }
+
+.pad {
+  padding-right: 1.5em;
+  padding-left: 1.5em; }
+  .pad:first-child {
+    padding-left: 3em; }
+  .pad:last-child {
+    padding-right: 3em; }
+
 header {
   font-size: 12px;
   display: flex;
@@ -66,52 +99,6 @@ header {
       text-align: center; }
     header .right-side {
       text-align: center; } }
-
-html {
-  font-family: 'Roboto Mono', monospace; }
-  html.dark {
-    background: #111;
-    color: #fff; }
-
-body {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  width: 100%; }
-
-.row {
-  display: flex;
-  flex-direction: row; }
-
-.column {
-  display: flex;
-  flex-direction: column;
-  flex: 1; }
-
-@media (max-width: 1000px) {
-  .column {
-    width: 100%; } }
-
-.pad {
-  padding-right: 1.5em;
-  padding-left: 1.5em; }
-  .pad:first-child {
-    padding-left: 3em; }
-  .pad:last-child {
-    padding-right: 3em; }
-
-footer {
-  display: flex;
-  flex: 1;
-  justify-content: center;
-  align-items: center;
-  min-height: 10em;
-  border-top: 1px solid #eee;
-  background: #fff; }
-  html.dark footer {
-    border-color: #222;
-    background: #111;
-    color: #fff; }
 
 .card-grid {
   max-width: 1000px;
@@ -197,7 +184,22 @@ main {
   display: flex;
   padding-bottom: 4em;
   border-top: 1px solid #eee; }
+  html.dark main {
+    border-color: #222; }
   main h1 {
     margin-top: 3em;
     margin-bottom: 3em;
     text-align: center; }
+
+footer {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  min-height: 10em;
+  border-top: 1px solid #eee;
+  background: #fff; }
+  html.dark footer {
+    border-color: #222;
+    background: #111;
+    color: #fff; }
