--- a/styles/main/index.scss
+++ b/styles/main/index.scss
@@ -4,6 +4,10 @@ main {
 	display: flex;
 	padding-bottom: 4em;
 	border-top: 1px solid #eee;
+
+	html.dark & {
+		border-color: #222;
+	}
 	
 	h1 {
 		margin-top: 3em;
